fix spacing issue on contact page in mobile view, made body font bigger

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -6,7 +6,7 @@ body {
   line-height: 1.4;
   font-family: $primary-font;
   -webkit-font-smoothing: antialiased;
-  font-size: 0.9em;
+  font-size: 0.95em;
   color: $text-color;
 }
 
